test/integration/bad/tuples/bad_unpack_global.stan
data {
  int x;
}

generated quantities {
   int y;

  (x,y) = (1,2);

}
